fix: method isBlank